--- a/tennis.html
+++ b/tennis.html
@@ -20,7 +20,7 @@
         </style>
     </head>
     <body>
-        <a href="./main.html"> go main </a>
+        <a href="./index.html"> go main </a>
         </div>
         <img class="card_img" src="./img/image.png">
     </body>
